autoencder for image embedding

--- a/config/gripper_grasp.yaml
+++ b/config/gripper_grasp.yaml
@@ -25,7 +25,7 @@ simulation:
 sensor:
   camera_info: config/camera_info.yaml
   transform: config/camera_transform.yaml
-  encoder_dir: encoder_files/new_gripper_encoder
+  encoder_dir: config/encoder.yaml
   visualize: false
 
   # Randomize camera parameters
