--- a/config/gripper_grasp.yaml
+++ b/config/gripper_grasp.yaml
@@ -14,19 +14,20 @@ robot:
 # Experimental setup parameters
 scene:
   scene_type: "OnTable" # OnTable scene is easier for the table clearing task
-  # scene_type: "OnFloor"
+  #scene_type: "OnFloor"
   data_set: random_urdfs
 
 # Simulation parameters
 simulation:
   real_time: False
   visualize: False
-
+  
 sensor:
   camera_info: config/camera_info.yaml
   transform: config/camera_transform.yaml
   encoder_dir: config/encoder.yaml
-  visualize: false
+  encode: True
+  visualize: True
 
   # Randomize camera parameters
   randomize:
@@ -42,10 +43,13 @@ reward:
   terminal_reward: 10000.
   # lift_success: 1000.
   grasp_reward: 100.
-  delta_z_scale: 1000.
-  time_penalty: 200.
+  delta_z_scale: 100.
+  close_penalty: 100.
+  out_penalty: 100.
+  time_penalty: 10.
   table_clearing: False # False - picks only one item. With True the episode terminates after each objects are cleared. Table clearing works better with the curriculum parameter max object [1, 5] 
 
+  
 # Workspace curriculum parameters
 curriculum:
   init_lambda: 0.
@@ -71,48 +75,14 @@ depth_observation: True
 full_observation: True
 # Markov decision process parameters
 discount_factor: 0.99
-time_horizon: 200
+time_horizon: 300
 # normalize the input and rewards
 normalize: True
 
-SAC:
-  max_iters: 400
-  batch_size: 64
-  layers: [64, 64]
-  buffer_size: 1000000
-  step_size: 0.0003
-  tensorboard_logs: !!null
-  total_timesteps: 2000000
-  save_dir: sac2m_depth_obs
-
-PPO:
-  learning_rate: 0.0003
-  layers: [64, 64]
-  save_dir: ppo_5m
-  tensorboard_logs: !!null
-  total_timesteps: 5000000
-  n_steps: 2000
-
-DQN:
-  learning_rate: 0.001
+DDPG:
   batch_size: 32
-  tensorboard_logs: !!null
-  save_dir: DQN4mFull
-  total_timesteps: 4000000
-  prioritized_replay: True
-
-BDQ:
-  learning_rate: 0.0001
-  prioritized_replay: False #True 
-  batch_size: 64
-  layers: [[64, 64], [32], [32]]
-  buffer_size: 1000000
-  epsilon_greedy: true
-  exploration_fraction: 0.3 # 0.1
-  exploration_final_eps: 0.1 #0.02
-  num_actions_pad: 33
-  learning_starts: 1000
-  target_network_update_freq: 1000
-  total_timesteps: 4000000
-  tensorboard_logs: !!null #tensorboard_logs/BDQ1mSimplified
-  save_dir: BDQ1mSimplified
+  tau: 0.1
+  gamma: 0.99
+  epsilon_start: 1
+  epsilon_end: 0
+  epsilon_decay: 200
